--- a/TPM-WS-Bower/src/log4j.properties
+++ b/TPM-WS-Bower/src/log4j.properties
@@ -38,11 +38,11 @@ log4j.appender.toConsole.layout.ConversionPattern = [%5p] - %c.%M - %m%n
 
 
 #DailyRollingFile
-log4j.appender.toFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.toFile.File= ${contextPath}/logs/app.log
-log4j.appender.toFile.DatePattern= '_'yyyy-MM-DD 
-log4j.appender.toFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.toFile.layout.ConversionPattern = [%5p] %d{yyyy-MM-dd HH:mm:ss} [%t] - %c.%M - %m%n
+#log4j.appender.toFile=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.toFile.File= ${contextPath}/logs/app.log
+#log4j.appender.toFile.DatePattern= '_'yyyy-MM-DD 
+#log4j.appender.toFile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.toFile.layout.ConversionPattern = [%5p] %d{yyyy-MM-dd HH:mm:ss} [%t] - %c.%M - %m%n
 
 
 
