changed to generic properties, enhanced appium server

--- a/TPM-WS-Bower/src/config.properties
+++ b/TPM-WS-Bower/src/config.properties
@@ -6,7 +6,7 @@ dbpassword=
 dbdriverclass=com.mysql.jdbc.Driver
 
 #MongoDB
-MONGODB_HOST=localhost
+MONGODB_HOST=172.16.21.191
 MONGODB_PORT=27017
 MONGODB_NAME=mobile
 mongodbusername=admin	
